# Document-database

./: CMakeLists.txt  Main.cpp  README.md  a.out
example_database/example_collection/: 2590493021271271924.txt  5087027558538014492.txt
example_database/mixed_collection/: 1937401347184505943.txt
example_database/simple_collection/: 489341571690486436.txt
include/: Collection.hpp  Database.hpp  Document.hpp  Logger.hpp  Seeder.hpp  Storage.hpp
src/: Collection.cpp  Database.cpp  Document.cpp  Seeder.cpp  Storage.cpp
test_database/: 2381108303341643958.txt
test_database/test_collection_0/: 8482643569069208438.txt  9593768778106862104.txt
test_database/test_collection_1/: 1189554868122494931.txt  355868193621290455.txt
test_database/test_collection_2/: 5175530754003186045.txt  6070036489475742309.txt  7744287572528817370.txt
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  CollectionTests.cpp  DatabaseTests.cpp  DocumentTests.cpp  StorageTests.cpp
